ui-router for angular,append

--- a/2016/03/2016-03-18+.md
+++ b/2016/03/2016-03-18+.md
@@ -329,3 +329,94 @@ $stateProvider
         "@" : { } 
   });
 ```
+
+##Url Routing
+---
+####**Basic example**
+
+```
+url: "/contacts/:contactId"
+url: "/contacts/{contactId}"
+<a ui-sref="contacts.detail({contactId: id})">View Contact</a>
+// will only match a contactId of one to eight number characters
+url: "/contacts/{contactId:[0-9]{1,8}}"
+url: "/contacts?myParam"
+// will match to url of "/contacts?myParam=value"
+url: "/contacts?myParam1&myParam2"
+// will match to url of "/contacts?myParam1=value1&myParam2=wowcool"
+
+
+// If you had a url on your state of:
+url: '/users/:id/details/{type}/{repeat:[0-9]+}?from&to'
+
+// Then you navigated your browser to:
+'/users/123/details//0'
+
+// Your $stateParams object would be
+{ id:'123', type:'', repeat:'0' }
+
+// Then you navigated your browser to:
+'/users/123/details/default/0?from=there&to=here'
+
+// Your $stateParams object would be
+{ id:'123', type:'default', repeat:'0', from:'there', to:'here' }
+```
+
+####**$stateParams**
+$stateParams每次被inject的时候只会包含当前state url的param
+```
+$stateProvider.state('contacts.detail', {
+   url: '/contacts/:contactId',   
+   controller: function($stateParams){
+      $stateParams.contactId  //*** Exists! ***//
+   }
+}).state('contacts.detail.subitem', {
+   url: '/item/:itemId', 
+   controller: function($stateParams){
+      $stateParams.contactId //*** Watch Out! DOESN'T EXIST!! ***//
+      $stateParams.itemId //*** Exists! ***//  
+   }
+})
+```
+想访问父state的param话需要借助resolve
+```
+$stateProvider.state('contacts.detail', {
+   url: '/contacts/:contactId',   
+   controller: function($stateParams){
+      $stateParams.contactId  //*** Exists! ***//
+   },
+   resolve:{
+      contactId: ['$stateParams', function($stateParams){
+          return $stateParams.contactId;
+      }]
+   }
+}).state('contacts.detail.subitem', {
+   url: '/item/:itemId', 
+   controller: function($stateParams, contactId){
+      contactId //*** Exists! ***//
+      $stateParams.itemId //*** Exists! ***//  
+   }
+})
+```
+####**$urlRouterProvider**
+
+- when()
+- otherwise()
+- rule()
+
+这里只给出常用的otherwise的例子
+```
+app.config(function($urlRouterProvider){
+    // if the path doesn't match any of the urls you configured
+    // otherwise will take care of routing the user to the specified url
+    $urlRouterProvider.otherwise('/index');
+
+    // Example of using function rule as param
+    $urlRouterProvider.otherwise(function($injector, $location){
+        ... some advanced code...
+    });
+})
+```
+
+#Last
+[ui-router api reference](http://angular-ui.github.io/ui-router/site/#/api/ui.router)
